[gd_scene load_steps=2 format=3 uid="uid://dgmd17e2fubkg"]

[ext_resource type="Script" path="res://scripts/pause_settings_screen.gd" id="1_unete"]

[node name="PauseSettingsScreen" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 646.0
script = ExtResource("1_unete")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.313726)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 472.0
offset_top = 48.0
offset_right = 681.0
offset_bottom = 122.0
theme_override_font_sizes/font_size = 54
text = "Settings"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 544.0
offset_right = 1112.0
offset_bottom = 600.0
theme_override_font_sizes/font_size = 32
text = "Back"

[node name="MasterLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 176.0
offset_right = 320.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 328.0
offset_top = 192.0
offset_right = 1080.0
offset_bottom = 208.0
max_value = 1.0
step = 0.01

[node name="SFXLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 256.0
offset_right = 253.0
offset_bottom = 301.0
theme_override_font_sizes/font_size = 32
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 328.0
offset_top = 272.0
offset_right = 1080.0
offset_bottom = 288.0
max_value = 1.0
step = 0.01

[node name="MusicLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 72.0
offset_top = 324.0
offset_right = 288.0
offset_bottom = 369.0
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="."]
layout_mode = 2
offset_left = 328.0
offset_top = 344.0
offset_right = 1080.0
offset_bottom = 360.0
max_value = 1.0
step = 0.01

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="value_changed" from="MasterSlider" to="." method="_on_master_slider_value_changed"]
[connection signal="value_changed" from="SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="value_changed" from="MusicSlider" to="." method="_on_music_slider_value_changed"]
